--- a/bower.json
+++ b/bower.json
@@ -15,11 +15,12 @@
     "*/tests"
   ],
   "dependencies": {
+    "live-sdk": "http://js.live.net/v5.0/wl.js",
     "aws-sdk": "~2.0.9",
-    "paper-toast": "Polymer/paper-toast#~0.3.5",
-    "paper-input": "Polymer/paper-input#~0.3.5",
-    "paper-button": "Polymer/paper-button#~0.3.5",
-    "paper-dropdown": "Polymer/paper-dropdown#~0.4.0",
+    "paper-toast": "Polymer/paper-toast#~0.5.4",
+    "paper-input": "Polymer/paper-input#~0.5.4",
+    "paper-button": "Polymer/paper-button#~0.5.4",
+    "paper-dropdown": "Polymer/paper-dropdown#~0.5.4",
     "paper-item": "Polymer/paper-item#~0.4.0"
   }
 }
