--- a/onedrivefs/extension/manifest.json
+++ b/onedrivefs/extension/manifest.json
@@ -7,6 +7,7 @@
   "app": {
     "background": {
       "scripts": [
+	"wl.js",
         "background.js"
       ]
     }
@@ -18,6 +19,7 @@
     "128": "icon/128.png"
   },
   "permissions": [
-    "fileSystemProvider"
+    "fileSystemProvider",
+    "storage"
   ]
 }
